Fixed suggest visibility

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -205,10 +205,17 @@ button {
   display: inline-block !important;
 }
 
+.input-predict-input {
+  position: relative;
+  background: transparent !important;
+  z-index: 2 !important;
+}
+
 .input-predict-suggestion {
   background: #aa8cc5 !important;
   left: 0;
   color: #d3d3d3 !important;
+  z-index: 1 !important;
 }
 
 ::-webkit-input-placeholder { /* Chrome */
@@ -338,11 +345,9 @@ input[type=number] {
   display: flex;
   flex-direction: row;
   margin-right: 48px;
-  border: solid 1px black;
 }
 
 .scheduleContainer {
-	border: solid 1px black;
 }
 
 .daysLabel {
